Fix bug with background fiex on iOS devices

--- a/web/wp-content/themes/stephanie/dev/src/scss/stephanie.scss
+++ b/web/wp-content/themes/stephanie/dev/src/scss/stephanie.scss
@@ -401,6 +401,13 @@ textarea {
   }
 }
 
+@media screen and (max-width: 1024px) {
+  #stephanie-header {
+    background: no-repeat center;
+    background-size: cover;
+  }
+}
+
 @keyframes jumping {
   0% {
     @include vendor-prefix('transform', translate(0, 0));
